# co-support

./: .gitignore  README.md  pyproject.toml  setup.py
co_assistant/: README.md  cmd.py  main.py  requirements.txt
co_assistant/prerequisites/: main.py
co_assistant/prerequisites/checks/: access.py  domain.py  network.py  quota.py
co_assistant/prerequisites/core/: checks.py  constants.py  prerequisite.py  render.py
co_support/: cmd.py  main.py  requirements.txt
co_support/prerequisites/: cmd.py  main.py
co_support/prerequisites/checks/: access.py  domain.py  network.py  quota.py
co_support/prerequisites/core/: answers.py  checks.py  constants.py  environment.py  prerequisite.py  questions.py
src/co_support/: cmd.py  main.py
src/co_support/prerequisites/: cmd.py
src/co_support/prerequisites/checks/: network.py  quota.py
src/co_support/prerequisites/core/: answers.py  checks.py  prerequisite.py  questions.py  render.py
